--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 
 /*
  * key 컬러
- *
  */
 :root {
   
@@ -15,15 +14,15 @@
   --hit-color: rgba(255, 255, 255, 0.8);
   --key-red: burlywood;
   --key-blue: burlywood;
-  --key-orange: black;
+  --key-orange: burlywood;
   --keypress-red: linear-gradient(
     to top,
-    rgba(254, 45, 87, 0.6),
+    lightgreen,
     rgba(254, 45, 87, 0)
   );
   --keypress-blue: linear-gradient(
     to top,
-    rgba(28, 121, 228, 0.6),
+    lightblue,
     rgba(28, 121, 228, 0)
   );
   --keypress-orange: linear-gradient(
@@ -40,8 +39,11 @@ html {
 body {
   font-family: "Nanum Gothic", sans-serif;
   background-size: cover;
-  background: black url("https://img2.quasarzone.com/editor/2020/06/24/2a18564000e81fa330caaeef94608eb5.jpg") center;
+  /* background: black url("https://img2.quasarzone.com/editor/2020/06/24/2a18564000e81fa330caaeef94608eb5.jpg") center; */
   
+  /* background-size: 100%; */
+  background-image: url("https://i.gifer.com/fyrX.gif");
+
   overflow: hidden;
 }
 
@@ -79,16 +81,39 @@ h2 {
   transform: translate(-50%, -50%);
 }
 
+#combo_word {
+  font-size: 4rem;
+  position: relative;
+  width: 100%;
+  margin: 0 auto; 
+  text-align: center;
+  /* float: left; */
+  opacity: 0.7;
+}
+h4 {
+  margin: 0 auto;
+  padding: 0;
+  background: linear-gradient(linen 10%, orange 20%, red 60%, linen 90%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .hit__combo {
   width: 100%;
-  height: 50%;
-  font-size: 7rem;
-  color: rgba(255, 199, 126, 0.8);
+  height: 80%;
+  font-size: 10rem;
+  position: relative;
+  /* color: rgba(255, 199, 126, 0.8); */
+  background: linear-gradient(linen 10%, orange 20%, red 60%, linen 90%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0.7;
+  bottom: 0px;
 }
 
 .hit__accuracy {
   position: absolute;
-  width: 100%;
+  width: 20%;
   height: 50%;
   font-size: 4rem;
 }
@@ -133,8 +158,8 @@ h2 {
 
 .key-container {
   display: flex;
-  /* flex: 0 0 15%; */
-  height: 10%;
+  flex: 0 0 15%;
+  /* height: 10%; */
 }
 
 .key {
